--- a/docs/features/plugin/tools/openapi-servers/mcp.mdx
+++ b/docs/features/plugin/tools/openapi-servers/mcp.mdx
@@ -45,8 +45,8 @@ So even though adding mcpo might at first seem like "just one more layer"—in r
 
 ✨ With mcpo, your local-only AI tools become cloud-ready, UI-friendly, and instantly interoperable—without changing a single line of tool server code.
 
-:::note
-**Limitation**: Since mcpo exposes MCP tools as OpenAPI endpoints, they inherit OpenAPI's limitations—specifically, they cannot use Open WebUI's [event system](/features/plugin/development/events) for real-time UI updates (status messages, notifications, user input prompts). These features are only available for native Python tools.
+:::tip
+**Events Supported**: While mcpo exposes MCP tools as OpenAPI endpoints, they can still emit events (status updates, notifications) via Open WebUI's [event REST endpoint](/features/plugin/development/events#-external-tool-events). Open WebUI automatically passes the required `X-Open-WebUI-Chat-Id` and `X-Open-WebUI-Message-Id` headers to your tool. However, interactive events requiring user input are only available for native Python tools.
 :::
 
 ### ✅ Quickstart: Running the Proxy Locally
