--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -259,6 +259,7 @@ Contributors are **volunteers with full-time jobs**. Asking them to maintain 10+
 
 Each provider has different approaches to:
 - Reasoning/thinking content format and structure
+- Tool calling schemas and response formats
 - Authentication and request signing
 - Error handling and rate limiting
 
